Use the compact digest of the view diadem - do'h
fix up view listener